<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGreen"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/label_future_earning_1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_future_earning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="28sp"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/pb_loading_future_earning"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:indeterminate="true"
                        android:indeterminateDrawable="@drawable/pb_accented_bg" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/label_future_earning_2"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="0dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:id="@+id/tv_sales_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/label_button_sales_history"
                        android:textAllCaps="true"
                        android:textColor="@color/selector_textview"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_sell_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/label_button_sell_now"
                        android:textAllCaps="true"
                        android:textColor="@color/selector_textview"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/label_supply_worth_1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_current_supply_worth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:textSize="28sp"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/pb_loading_current_supply_worth"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:indeterminate="true"
                        android:indeterminateDrawable="@drawable/pb_accented_bg" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="0dp">

                    <TextView
                        android:id="@+id/tv_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/label_button_details"
                        android:textAllCaps="true"
                        android:textColor="@color/selector_textview"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_order_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="@string/label_button_order_now"
                        android:textAllCaps="true"
                        android:textColor="@color/selector_textview"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/brightGreen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingTop="4dp"
                        android:text="@string/label_invite"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="0dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingTop="4dp"
                        android:text="@string/label_invite_1"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingTop="0dp"
                        android:text="@string/label_invite_2"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_invite_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="12dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_invite_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minWidth="200dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/pb_loading_invite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/pb_white_bg" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
